# yml-traductor

./: README.md  main.py  materials.db  pyproject.toml  requirements.txt
.github/workflows/: main.yml  release.yml
data/: materials.db
src/yml_traductor/: __main__.py  yml_traductor.py
yml_traductor/: __main__.py  yml_traductor.py
