[tool.poetry]
name = "yml-traductor"
version = "0.1.0"
description = ""
authors = ["diego <diego.rivera.estefano@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
deep-translator = "^1.11.4"
fire = "^0.5.0"
pyaml = "^23.12.0"
tqdm = "^4.66.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
