[tool.poetry]
name = "yml-traductor"
version = "0.1.0"
description = ""
authors = ["diego <diego.rivera.estefano@gmail.com>"]
readme = "README.md"
packages = [{include = "src/yml_traductor"}]
include = [{ path = "tests", format = "sdist" }]

[tool.poetry.dependencies]
python = "^3.11"
deep-translator = "^1.11.4"
fire = "^0.5.0"
pyaml = "^23.12.0"
tqdm = "^4.66.2"


[tool.poetry.group.test.dependencies]
pytest = "^8.0.2"
requests-mock = "^1.11.0"

[tool.poetry.group.github-actions]
optional = true

[tool.poetry.group.github-actions.dependencies]
pytest-github-actions-annotate-failures = "^0.1.7"

[tool.ruff]
extend-exclude = [
    "docs/*",
    # External to the project's coding standards
    "tests/**/fixtures/*",
]
fix = true
line-length = 88
src = ["src"]
target-version = "py38"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
