[tool.poetry]
name = "yml-traductor"
version = "0.1.0"
description = ""
authors = ["diego <diego.rivera.estefano@gmail.com>"]
readme = "README.md"
packages = [{include = "src/yml_traductor"}]
include = [{ path = "tests", format = "sdist" }]

[tool.poetry.dependencies]
python = "^3.11"
deep-translator = "^1.11.4"
fire = "^0.5.0"
pyaml = "^23.12.0"
tqdm = "^4.66.2"

[tool.poetry.group.test.dependencies]
pytest = "^8.0.2"
requests-mock = "^1.11.0"

[tool.poetry.group.dev.dependencies]
pre-commit = ">=2.10"

[tool.poetry.group.typing.dependencies]
mypy = ">=1.8.0"
types-requests = ">=2.28.8"

[tool.poetry.group.github-actions]
optional = true

[tool.poetry.group.github-actions.dependencies]
pytest-github-actions-annotate-failures = "^0.1.7"

[tool.poetry.scripts]
ymltranslate = "src.yml_traductor.yml_traductor:main"


[tool.ruff]
extend-exclude = [
    "docs/*",
    # External to the project's coding standards
    "tests/**/fixtures/*",
]
fix = true
line-length = 88
src = ["src"]
target-version = "py38"

[tool.mypy]
files = "src, tests"
mypy_path = "src"
namespace_packages = true
explicit_package_bases = true
show_error_codes = true
strict = true
enable_error_code = [
    "ignore-without-code",
    "redundant-expr",
    "truthy-bool",
]
exclude = [
    "tests/fixtures",
    "tests/masonry/builders/fixtures",
    "tests/utils/fixtures",
]

# use of importlib-metadata backport makes it impossible to satisfy mypy
# without some ignores: but we get different sets of ignores at different
# python versions.
[[tool.mypy.overrides]]
module = [
    'poetry.plugins.plugin_manager',
    'poetry.repositories.installed_repository',
    'poetry.utils.env.site_packages',
    'tests.console.commands.self.test_show_plugins',
    'tests.helpers',
    'tests.repositories.test_installed_repository',
]
warn_unused_ignores = false

[[tool.mypy.overrides]]
module = [
    'deepdiff.*',
    'fastjsonschema.*',
    'httpretty.*',
    'keyring.*',
    'pexpect.*',
    'requests_toolbelt.*',
    'shellingham.*',
    'virtualenv.*',
    'xattr.*',
]
ignore_missing_imports = true


[tool.pytest.ini_options]
addopts = "-n auto"
testpaths = ["tests"]
markers = [
    "network: mark tests that require internet access",
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
